SERVER-50920 Fix resuming index builds from the bulk load phase

* Copy, rather than std::move(), Sorter data into InMemIterator
* Clear multikey metadata keys after being inserted into the Sorter